--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <section class="education">
         <h2>Education Qualification</h2>
-        <p><strong>B.Tech in Computer Science Engineering (CSE)</strong><br>KLU Vaddeswaram, Andhra Pradesh, India (Expected Graduation: May 2027)<br>CGPA: 8.96</p>
-        <p><strong>12th Class</strong><br>Sri Chaitanya Junior College, 8.96%</p>
+        <p><strong>B.Tech in Computer Science Engineering (CSE)</strong><br>KLU Vaddeswaram, Andhra Pradesh, India (Expected Graduation: May 2027)<br>CGPA: 9.09</p>
+        <p><strong>12th Class</strong><br>Sri Chaitanya Junior College, 8.66%</p>
         <p><strong>10th Class</strong><br>Oxford IIT and Medical Foundation School, Marks: 600/600</p>
     </section>
 
@@ -36,6 +36,7 @@
             <li>Java (Beginner)</li>
             <li>HTML</li>
         </ul>
+        
     </section>
 
     <section class="soft-skills">
@@ -62,7 +63,7 @@
 
     <section class="extra-curricular">
         <h2>Additional Details</h2>
-        <p>I'm also an active member of our college club, participating in various extracurricular activities. Additionally, I have some knowledge of Spanish, including reading, writing, and understanding basic phrases.</p>
+        <p>Being a student peer mentor, helping and suggesting to my dears in all the aspects where I can , also an active member of our college club, participating in various extracurricular activities. Additionally, I have some knowledge of Spanish, including reading, writing, and understanding basic phrases.<br></br></p>
     </section>
 
     <footer>
